src/pages/Placeholder/Placeholder.css
.place-holder{
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 50px;
    margin-top: 100px;

}
.place-holder-left
{
    width: 100%;
    max-width: max(30%,500px);

}
.title{
    font-size: 30px;
    font-weight: 600;
    margin-bottom: 50px;


}
.place-holder-left input{
    margin-bottom: 15px;
    width: 100%;
    padding: 10px;
    border: 1px solid#c5c5c5;
    outline-color: tomato;
}
.multi-fields
{
    display: flex;
    gap: 10px;
}
.place-holder-right {
    width: 100%;
    max-width: max(40%, 500px);
    margin-top: 180px; 
    position: absolute; 
    top: 0; 
    right: 0; 
}

